--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,8 @@
     "x_squared = [(1, 2)]\n",
     "range_twenty_four = list(range(0, 25))\n",
     "six = list(map(lambda x: x/4.0, range_twenty_four))\n",
-    "# \n",
+    "\n",
+    "# function_values_trace(list_of_terms, x_values)\n",
     "trace_x_squared = function_values_trace(x_squared, six)\n",
     "layout = build_layout(x_axis = {'title': 'number of seconds'}, y_axis = {'title': 'distance'})\n",
     "plot([trace_x_squared], layout)"
