automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -598,6 +598,7 @@
     "from graph import plot\n",
     "x_squared = [(1, 2)]\n",
     "\n",
+    "# delta_traces(list_of_terms, x_value, line_length = 4, delta_x = .01)\n",
     "x_squared_delta_traces = delta_traces(x_squared, 2, line_length = 4, delta_x = 1)\n",
     "\n",
     "layout = build_layout(x_axis = {'title': 'number of seconds', 'range': [1.5, 4]}, y_axis = {'title': 'distance', 'range': [0, 12]})\n",
