automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "8b2e0eec-b5b5-11e8-b0ed-0242ac110007",
+         "uid": "56a1d894-c176-11e8-b898-0242ac11000e",
          "x": [
           0,
           0.25,
@@ -538,7 +538,7 @@
          "name": "f' (x) = 5.0",
          "text": [],
          "type": "scatter",
-         "uid": "8b2e12e8-b5b5-11e8-b0ed-0242ac110007",
+         "uid": "56a1dbd2-c176-11e8-b898-0242ac11000e",
          "x": [
           0,
           2,
@@ -555,7 +555,7 @@
          "name": "delta f = 1",
          "text": [],
          "type": "scatter",
-         "uid": "8b2e15e0-b5b5-11e8-b0ed-0242ac110007",
+         "uid": "56a1dfa6-c176-11e8-b898-0242ac11000e",
          "x": [
           3,
           3
@@ -570,7 +570,7 @@
          "name": "delta x = 1",
          "text": [],
          "type": "scatter",
-         "uid": "8b2e18a6-b5b5-11e8-b0ed-0242ac110007",
+         "uid": "56a1e514-c176-11e8-b898-0242ac11000e",
          "x": [
           2,
           3
@@ -581,13 +581,28 @@
          ]
         }
        ],
-       "layout": {}
+       "layout": {
+        "xaxis": {
+         "range": [
+          1.5,
+          4
+         ],
+         "title": "number of seconds"
+        },
+        "yaxis": {
+         "range": [
+          0,
+          12
+         ],
+         "title": "distance"
+        }
+       }
       },
       "text/html": [
-       "<div id=\"a46d135d-5c5c-45d9-b07a-8a77acd93329\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a46d135d-5c5c-45d9-b07a-8a77acd93329\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"8b384bc8-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [0.0, 2, 4.0], \"y\": [-6.0, 4, 14.0], \"type\": \"scatter\", \"uid\": \"8b384e98-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [4, 9], \"type\": \"scatter\", \"uid\": \"8b385050-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [4, 4], \"type\": \"scatter\", \"uid\": \"8b3851d6-b5b5-11e8-b0ed-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"d35e01bf-e7b9-4da1-a117-f4c6cbbe161e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d35e01bf-e7b9-4da1-a117-f4c6cbbe161e\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"56aad412-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [0.0, 2, 4.0], \"y\": [-6.0, 4, 14.0], \"type\": \"scatter\", \"uid\": \"56aad6b0-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [4, 9], \"type\": \"scatter\", \"uid\": \"56aad82c-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [4, 4], \"type\": \"scatter\", \"uid\": \"56aad976-c176-11e8-b898-0242ac11000e\"}], {\"xaxis\": {\"range\": [1.5, 4], \"title\": \"number of seconds\"}, \"yaxis\": {\"range\": [0, 12], \"title\": \"distance\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"a46d135d-5c5c-45d9-b07a-8a77acd93329\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a46d135d-5c5c-45d9-b07a-8a77acd93329\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"8b384bc8-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [0.0, 2, 4.0], \"y\": [-6.0, 4, 14.0], \"type\": \"scatter\", \"uid\": \"8b384e98-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [4, 9], \"type\": \"scatter\", \"uid\": \"8b385050-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [4, 4], \"type\": \"scatter\", \"uid\": \"8b3851d6-b5b5-11e8-b0ed-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"d35e01bf-e7b9-4da1-a117-f4c6cbbe161e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d35e01bf-e7b9-4da1-a117-f4c6cbbe161e\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"56aad412-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [0.0, 2, 4.0], \"y\": [-6.0, 4, 14.0], \"type\": \"scatter\", \"uid\": \"56aad6b0-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [4, 9], \"type\": \"scatter\", \"uid\": \"56aad82c-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [4, 4], \"type\": \"scatter\", \"uid\": \"56aad976-c176-11e8-b898-0242ac11000e\"}], {\"xaxis\": {\"range\": [1.5, 4], \"title\": \"number of seconds\"}, \"yaxis\": {\"range\": [0, 12], \"title\": \"distance\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
