automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "8d8fc0a4-b5b5-11e8-b0ed-0242ac110007",
+         "uid": "7d149520-c176-11e8-b898-0242ac11000e",
          "x": [
           0,
           0.25,
@@ -718,7 +718,7 @@
          "name": "f' (x) = 5.0",
          "text": [],
          "type": "scatter",
-         "uid": "8d8fc306-b5b5-11e8-b0ed-0242ac110007",
+         "uid": "7d149930-c176-11e8-b898-0242ac11000e",
          "x": [
           0,
           2,
@@ -735,7 +735,7 @@
          "name": "delta f = 1",
          "text": [],
          "type": "scatter",
-         "uid": "8d8fc482-b5b5-11e8-b0ed-0242ac110007",
+         "uid": "7d149ea8-c176-11e8-b898-0242ac11000e",
          "x": [
           3,
           3
@@ -750,7 +750,7 @@
          "name": "delta x = 1",
          "text": [],
          "type": "scatter",
-         "uid": "8d8fc5d6-b5b5-11e8-b0ed-0242ac110007",
+         "uid": "7d14a362-c176-11e8-b898-0242ac11000e",
          "x": [
           2,
           3
@@ -761,13 +761,28 @@
          ]
         }
        ],
-       "layout": {}
+       "layout": {
+        "xaxis": {
+         "range": [
+          1.5,
+          3.5
+         ],
+         "title": "number of seconds"
+        },
+        "yaxis": {
+         "range": [
+          0,
+          12
+         ],
+         "title": "distance"
+        }
+       }
       },
       "text/html": [
-       "<div id=\"202576e8-63c1-49c9-807c-3f6b50bdd5c7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"202576e8-63c1-49c9-807c-3f6b50bdd5c7\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"8d95ac08-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [0.0, 2, 4.0], \"y\": [-6.0, 4, 14.0], \"type\": \"scatter\", \"uid\": \"8d95ae6a-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [4, 9], \"type\": \"scatter\", \"uid\": \"8d95aff0-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [4, 4], \"type\": \"scatter\", \"uid\": \"8d95b144-b5b5-11e8-b0ed-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"fd27c1d1-964d-4d2b-8db1-f06fa20e371d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fd27c1d1-964d-4d2b-8db1-f06fa20e371d\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"7d1f1ba8-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [0.0, 2, 4.0], \"y\": [-6.0, 4, 14.0], \"type\": \"scatter\", \"uid\": \"7d1f1e28-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [4, 9], \"type\": \"scatter\", \"uid\": \"7d1f1fa4-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [4, 4], \"type\": \"scatter\", \"uid\": \"7d1f20f8-c176-11e8-b898-0242ac11000e\"}], {\"xaxis\": {\"range\": [1.5, 3.5], \"title\": \"number of seconds\"}, \"yaxis\": {\"range\": [0, 12], \"title\": \"distance\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"202576e8-63c1-49c9-807c-3f6b50bdd5c7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"202576e8-63c1-49c9-807c-3f6b50bdd5c7\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"8d95ac08-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [0.0, 2, 4.0], \"y\": [-6.0, 4, 14.0], \"type\": \"scatter\", \"uid\": \"8d95ae6a-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [4, 9], \"type\": \"scatter\", \"uid\": \"8d95aff0-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [4, 4], \"type\": \"scatter\", \"uid\": \"8d95b144-b5b5-11e8-b0ed-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"fd27c1d1-964d-4d2b-8db1-f06fa20e371d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fd27c1d1-964d-4d2b-8db1-f06fa20e371d\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"7d1f1ba8-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [0.0, 2, 4.0], \"y\": [-6.0, 4, 14.0], \"type\": \"scatter\", \"uid\": \"7d1f1e28-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"delta f = 1\", \"text\": [], \"x\": [3, 3], \"y\": [4, 9], \"type\": \"scatter\", \"uid\": \"7d1f1fa4-c176-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"delta x = 1\", \"text\": [], \"x\": [2, 3], \"y\": [4, 4], \"type\": \"scatter\", \"uid\": \"7d1f20f8-c176-11e8-b898-0242ac11000e\"}], {\"xaxis\": {\"range\": [1.5, 3.5], \"title\": \"number of seconds\"}, \"yaxis\": {\"range\": [0, 12], \"title\": \"distance\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
