automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "90410344-b5b5-11e8-b0ed-0242ac110007",
+         "uid": "d0347a30-c177-11e8-b898-0242ac11000e",
          "x": [
           0,
           0.25,
@@ -948,7 +948,7 @@
          "name": "f' (x) = 5.0",
          "text": [],
          "type": "scatter",
-         "uid": "904106dc-b5b5-11e8-b0ed-0242ac110007",
+         "uid": "d0347cf6-c177-11e8-b898-0242ac11000e",
          "x": [
           1,
           2,
@@ -961,13 +961,26 @@
          ]
         }
        ],
-       "layout": {}
+       "layout": {
+        "xaxis": {
+         "range": [
+          0,
+          4
+         ]
+        },
+        "yaxis": {
+         "range": [
+          0,
+          10
+         ]
+        }
+       }
       },
       "text/html": [
-       "<div id=\"e7b5770b-018a-40a1-ac20-814fa3ab28e7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e7b5770b-018a-40a1-ac20-814fa3ab28e7\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"9045da72-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [1.0, 2, 3.0], \"y\": [-1.0, 4, 9.0], \"type\": \"scatter\", \"uid\": \"9045dcd4-b5b5-11e8-b0ed-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"7cc1f402-a0ac-47cc-85ce-6fcaf80cc2ca\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7cc1f402-a0ac-47cc-85ce-6fcaf80cc2ca\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"d041b268-c177-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [1.0, 2, 3.0], \"y\": [-1.0, 4, 9.0], \"type\": \"scatter\", \"uid\": \"d041b65a-c177-11e8-b898-0242ac11000e\"}], {\"xaxis\": {\"range\": [0, 4]}, \"yaxis\": {\"range\": [0, 10]}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"e7b5770b-018a-40a1-ac20-814fa3ab28e7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e7b5770b-018a-40a1-ac20-814fa3ab28e7\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"9045da72-b5b5-11e8-b0ed-0242ac110007\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [1.0, 2, 3.0], \"y\": [-1.0, 4, 9.0], \"type\": \"scatter\", \"uid\": \"9045dcd4-b5b5-11e8-b0ed-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"7cc1f402-a0ac-47cc-85ce-6fcaf80cc2ca\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"7cc1f402-a0ac-47cc-85ce-6fcaf80cc2ca\", [{\"mode\": \"lines+markers\", \"name\": \"data\", \"text\": [], \"x\": [0.0, 0.25, 0.5, 0.75, 1.0, 1.25, 1.5, 1.75, 2.0, 2.25, 2.5, 2.75, 3.0, 3.25, 3.5, 3.75, 4.0, 4.25, 4.5, 4.75, 5.0, 5.25, 5.5, 5.75, 6.0], \"y\": [0.0, 0.0625, 0.25, 0.5625, 1.0, 1.5625, 2.25, 3.0625, 4.0, 5.0625, 6.25, 7.5625, 9.0, 10.5625, 12.25, 14.0625, 16.0, 18.0625, 20.25, 22.5625, 25.0, 27.5625, 30.25, 33.0625, 36.0], \"type\": \"scatter\", \"uid\": \"d041b268-c177-11e8-b898-0242ac11000e\"}, {\"mode\": \"lines+markers\", \"name\": \"f' (x) = 5.0\", \"text\": [], \"x\": [1.0, 2, 3.0], \"y\": [-1.0, 4, 9.0], \"type\": \"scatter\", \"uid\": \"d041b65a-c177-11e8-b898-0242ac11000e\"}], {\"xaxis\": {\"range\": [0, 4]}, \"yaxis\": {\"range\": [0, 10]}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
